@@ -1,3 +1,5 @@
+2023-01-27 [1.5.0]
+* convert to module for archivCZSK >=1.7.0
 2022-04-04 [1.4.1]
 * some minor fixes
 2022-04-04 [1.4.0]
